scrollbar width-shifting fixes

--- a/src/app/components/background-image-card/background-image-card.component.css
+++ b/src/app/components/background-image-card/background-image-card.component.css
@@ -1,6 +1,5 @@
 .card {
     width: 100%;
-    max-height: 800px;
     overflow: hidden;
 }
 
