--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,9 +1,27 @@
 .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: black;
-    width: 100%;
+    padding: 5px;
     height: 50px;
+    width: calc(100% - 10px);
 }
 
 .logo {
+    width: 10px;
     filter: invert();
+}
+
+.a {
+    height: 20px;
+    width: 20%;
+    background-color: red;
+}
+
+.b {
+    height: 20px;
+    width: 20%;
+    background-color: rgb(0, 183, 255);
 }
